--- a/Course2_week2_multipleregression_assignment1.ipynb
+++ b/Course2_week2_multipleregression_assignment1.ipynb
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "sales = graphlab.SFrame('kc_house_data2.gl/')"
+    "sales = graphlab.SFrame('kc_house_data2a.gl/')"
    ]
   },
   {
